parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones_globales
Rule 2     instrucciones_globales -> instrucciones_globales instruccion_global
Rule 3     instrucciones_globales -> instruccion_global
Rule 4     instruccion_global -> declaracion PTCOMA
Rule 5     declaracion -> tipo lista_asignaciones_dec
Rule 6     lista_asignaciones_dec -> lista_asignaciones_dec COMA asignacion_dec
Rule 7     lista_asignaciones_dec -> asignacion_dec
Rule 8     asignacion_dec -> IDENTIFICADOR
Rule 9     asignacion_dec -> IDENTIFICADOR ASIG expresion
Rule 10    asignacion_dec -> IDENTIFICADOR accesos
Rule 11    asignacion_dec -> IDENTIFICADOR accesos ASIG expresion
Rule 12    sig_asig -> ASIG
Rule 13    sig_asig -> AND_ASIG
Rule 14    sig_asig -> DER_ASIG
Rule 15    sig_asig -> DIV_ASIG
Rule 16    sig_asig -> IZQ_ASIG
Rule 17    sig_asig -> MAS_ASIG
Rule 18    sig_asig -> MENOS_ASIG
Rule 19    sig_asig -> MOD_ASIG
Rule 20    sig_asig -> OR_ASIG
Rule 21    sig_asig -> POR_ASIG
Rule 22    sig_asig -> XOR_ASIG
Rule 23    tipo -> INT
Rule 24    tipo -> CHAR
Rule 25    tipo -> DOUBLE
Rule 26    tipo -> FLOAT
Rule 27    accesos -> accesos acceso
Rule 28    accesos -> acceso
Rule 29    acceso -> CIZQ expresion CDER
Rule 30    acceso -> CIZQ CDER
Rule 31    instruccion_global -> def_struct PTCOMA
Rule 32    def_struct -> STRUCT IDENTIFICADOR LLIZQ struct_lista_decl LLDER
Rule 33    struct_lista_decl -> struct_lista_decl struct_decl
Rule 34    struct_lista_decl -> struct_decl
Rule 35    struct_decl -> tipo lista_id_struct PTCOMA
Rule 36    lista_id_struct -> lista_id_struct COMA id_struct
Rule 37    lista_id_struct -> id_struct
Rule 38    id_struct -> IDENTIFICADOR
Rule 39    id_struct -> IDENTIFICADOR accesos
Rule 40    instruccion_global -> declaracion_struct PTCOMA
Rule 41    declaracion_struct -> STRUCT IDENTIFICADOR IDENTIFICADOR
Rule 42    declaracion_struct -> STRUCT IDENTIFICADOR IDENTIFICADOR accesos
Rule 43    instruccion_global -> metodo
Rule 44    metodo -> VOID IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
Rule 45    metodo -> VOID IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
Rule 46    metodo -> tipo IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
Rule 47    metodo -> tipo IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
Rule 48    lista_parametros -> lista_parametros COMA parametro
Rule 49    lista_parametros -> parametro
Rule 50    parametro -> tipo IDENTIFICADOR
Rule 51    parametro -> tipo IDENTIFICADOR accesos
Rule 52    instrucciones -> instrucciones instruccion
Rule 53    instrucciones -> instruccion
Rule 54    instruccion -> declaracion PTCOMA
Rule 55    instruccion -> def_struct PTCOMA
Rule 56    instruccion -> declaracion_struct PTCOMA
Rule 57    instruccion -> PRINTF PIZQ CADENA COMA lista_param_printf PDER PTCOMA
Rule 58    instruccion -> PRINTF PIZQ CADENA PDER PTCOMA
Rule 59    lista_param_printf -> lista_param_printf COMA expresion
Rule 60    lista_param_printf -> expresion
Rule 61    instruccion -> asignacion PTCOMA
Rule 62    asignacion -> IDENTIFICADOR sig_asig expresion
Rule 63    asignacion -> IDENTIFICADOR accesos sig_asig expresion
Rule 64    asignacion -> IDENTIFICADOR lista_punto sig_asig expresion
Rule 65    asignacion -> IDENTIFICADOR accesos lista_punto sig_asig expresion
Rule 66    lista_punto -> lista_punto PUNTO valor
Rule 67    lista_punto -> PUNTO valor
Rule 68    valor -> IDENTIFICADOR
Rule 69    valor -> IDENTIFICADOR accesos
Rule 70    instruccion -> if
Rule 71    if -> IF PIZQ expresion PDER LLIZQ instrucciones LLDER
Rule 72    if -> IF PIZQ expresion PDER LLIZQ instrucciones LLDER ELSE LLIZQ instrucciones LLDER
Rule 73    if -> IF PIZQ expresion PDER LLIZQ instrucciones LLDER ELSE if
Rule 74    instruccion -> switch_ins
Rule 75    switch_ins -> SWITCH PIZQ expresion PDER LLIZQ lista_cases LLDER
Rule 76    switch_ins -> SWITCH PIZQ expresion PDER LLIZQ lista_cases default LLDER
Rule 77    lista_cases -> lista_cases case
Rule 78    lista_cases -> case
Rule 79    case -> CASE expresion DPUNTOS instrucciones
Rule 80    default -> DEFAULT DPUNTOS instrucciones
Rule 81    instruccion -> while
Rule 82    while -> WHILE PIZQ expresion PDER LLIZQ instrucciones LLDER
Rule 83    instruccion -> do_while
Rule 84    do_while -> DO LLIZQ instrucciones LLDER WHILE PIZQ expresion PDER PTCOMA
Rule 85    instruccion -> for
Rule 86    for -> FOR PIZQ for_ini PTCOMA for_exp PTCOMA for_inc PDER LLIZQ instrucciones LLDER
Rule 87    for_ini -> IDENTIFICADOR
Rule 88    for_ini -> declaracion
Rule 89    for_ini -> asignacion
Rule 90    for_ini -> <empty>
Rule 91    for_exp -> expresion
Rule 92    for_exp -> <empty>
Rule 93    for_inc -> asignacion
Rule 94    for_inc -> inc_dec
Rule 95    for_inc -> <empty>
Rule 96    instruccion -> BREAK PTCOMA
Rule 97    instruccion -> CONTINUE PTCOMA
Rule 98    instruccion -> RETURN PTCOMA
Rule 99    instruccion -> RETURN expresion PTCOMA
Rule 100   instruccion -> inc_dec PTCOMA
Rule 101   inc_dec -> INCREMENTO IDENTIFICADOR
Rule 102   inc_dec -> IDENTIFICADOR INCREMENTO
Rule 103   inc_dec -> DECREMENTO IDENTIFICADOR
Rule 104   inc_dec -> IDENTIFICADOR DECREMENTO
Rule 105   expresion -> expresion MAS expresion
Rule 106   expresion -> expresion MENOS expresion
Rule 107   expresion -> expresion POR expresion
Rule 108   expresion -> expresion DIVIDIDO expresion
Rule 109   expresion -> expresion MODULO expresion
Rule 110   expresion -> expresion AND expresion
Rule 111   expresion -> expresion OR expresion
Rule 112   expresion -> expresion BBAND expresion
Rule 113   expresion -> expresion BBOR expresion
Rule 114   expresion -> expresion BBXOR expresion
Rule 115   expresion -> expresion BBIZQ expresion
Rule 116   expresion -> expresion BBDER expresion
Rule 117   expresion -> expresion IGUAL_QUE expresion
Rule 118   expresion -> expresion DESIGUAL_QUE expresion
Rule 119   expresion -> expresion MENOR_QUE expresion
Rule 120   expresion -> expresion MAYOR_QUE expresion
Rule 121   expresion -> expresion MENOR_IGUAL_QUE expresion
Rule 122   expresion -> expresion MAYOR_IGUAL_QUE expresion
Rule 123   expresion -> BBNOT expresion
Rule 124   expresion -> NOT expresion
Rule 125   expresion -> INCREMENTO IDENTIFICADOR
Rule 126   expresion -> DECREMENTO IDENTIFICADOR
Rule 127   expresion -> BBAND expresion
Rule 128   expresion -> IDENTIFICADOR INCREMENTO
Rule 129   expresion -> IDENTIFICADOR DECREMENTO
Rule 130   expresion -> IDENTIFICADOR accesos
Rule 131   expresion -> IDENTIFICADOR lista_punto
Rule 132   expresion -> IDENTIFICADOR accesos lista_punto
Rule 133   expresion -> ENTERO
Rule 134   expresion -> CADENA
Rule 135   expresion -> DECIMAL
Rule 136   expresion -> CARACTER
Rule 137   expresion -> IDENTIFICADOR
Rule 138   expresion -> llamada
Rule 139   expresion -> PIZQ expresion PDER
Rule 140   expresion -> expresion TERNARIO expresion DPUNTOS expresion
Rule 141   expresion -> SIZEOF PIZQ expresion PDER
Rule 142   expresion -> SIZEOF PIZQ tipo PDER
Rule 143   expresion -> PIZQ tipo PDER expresion
Rule 144   instruccion -> llamada PTCOMA
Rule 145   llamada -> IDENTIFICADOR PIZQ PDER
Rule 146   llamada -> IDENTIFICADOR PIZQ lista_expresiones PDER
Rule 147   lista_expresiones -> lista_expresiones COMA expresion
Rule 148   lista_expresiones -> expresion

Terminals, with rules where they appear

AND                  : 110
AND_ASIG             : 13
ASIG                 : 9 11 12
BBAND                : 112 127
BBDER                : 116
BBIZQ                : 115
BBNOT                : 123
BBOR                 : 113
BBXOR                : 114
BREAK                : 96
CADENA               : 57 58 134
CARACTER             : 136
CASE                 : 79
CDER                 : 29 30
CHAR                 : 24
CIZQ                 : 29 30
COMA                 : 6 36 48 57 59 147
CONTINUE             : 97
DECIMAL              : 135
DECREMENTO           : 103 104 126 129
DEFAULT              : 80
DER_ASIG             : 14
DESIGUAL_QUE         : 118
DIVIDIDO             : 108
DIV_ASIG             : 15
DO                   : 84
DOUBLE               : 25
DPUNTOS              : 79 80 140
ELSE                 : 72 73
ENTERO               : 133
FLOAT                : 26
FOR                  : 86
IDENTIFICADOR        : 8 9 10 11 32 38 39 41 41 42 42 44 45 46 47 50 51 62 63 64 65 68 69 87 101 102 103 104 125 126 128 129 130 131 132 137 145 146
IF                   : 71 72 73
IGUAL_QUE            : 117
INCREMENTO           : 101 102 125 128
INT                  : 23
IZQ_ASIG             : 16
LLDER                : 32 44 45 46 47 71 72 72 73 75 76 82 84 86
LLIZQ                : 32 44 45 46 47 71 72 72 73 75 76 82 84 86
MAS                  : 105
MAS_ASIG             : 17
MAYOR_IGUAL_QUE      : 122
MAYOR_QUE            : 120
MENOR_IGUAL_QUE      : 121
MENOR_QUE            : 119
MENOS                : 106
MENOS_ASIG           : 18
MODULO               : 109
MOD_ASIG             : 19
NOT                  : 124
OR                   : 111
OR_ASIG              : 20
PDER                 : 44 45 46 47 57 58 71 72 73 75 76 82 84 86 139 141 142 143 145 146
PIZQ                 : 44 45 46 47 57 58 71 72 73 75 76 82 84 86 139 141 142 143 145 146
POR                  : 107
POR_ASIG             : 21
PRINTF               : 57 58
PTCOMA               : 4 31 35 40 54 55 56 57 58 61 84 86 86 96 97 98 99 100 144
PUNTO                : 66 67
RETURN               : 98 99
SIZEOF               : 141 142
STRUCT               : 32 41 42
SWITCH               : 75 76
TERNARIO             : 140
VOID                 : 44 45
WHILE                : 82 84
XOR_ASIG             : 22
error                : 

Nonterminals, with rules where they appear

acceso               : 27 28
accesos              : 10 11 27 39 42 51 63 65 69 130 132
asignacion           : 61 89 93
asignacion_dec       : 6 7
case                 : 77 78
declaracion          : 4 54 88
declaracion_struct   : 40 56
def_struct           : 31 55
default              : 76
do_while             : 83
expresion            : 9 11 29 59 60 62 63 64 65 71 72 73 75 76 79 82 84 91 99 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 124 127 139 140 140 140 141 143 147 148
for                  : 85
for_exp              : 86
for_inc              : 86
for_ini              : 86
id_struct            : 36 37
if                   : 70 73
inc_dec              : 94 100
init                 : 0
instruccion          : 52 53
instruccion_global   : 2 3
instrucciones        : 44 45 46 47 52 71 72 72 73 79 80 82 84 86
instrucciones_globales : 1 2
lista_asignaciones_dec : 5 6
lista_cases          : 75 76 77
lista_expresiones    : 146 147
lista_id_struct      : 35 36
lista_param_printf   : 57 59
lista_parametros     : 44 46 48
lista_punto          : 64 65 66 131 132
llamada              : 138 144
metodo               : 43
parametro            : 48 49
sig_asig             : 62 63 64 65
struct_decl          : 33 34
struct_lista_decl    : 32 33
switch_ins           : 74
tipo                 : 5 35 46 47 50 51 142 143
valor                : 66 67
while                : 81

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones_globales
    (2) instrucciones_globales -> . instrucciones_globales instruccion_global
    (3) instrucciones_globales -> . instruccion_global
    (4) instruccion_global -> . declaracion PTCOMA
    (31) instruccion_global -> . def_struct PTCOMA
    (40) instruccion_global -> . declaracion_struct PTCOMA
    (43) instruccion_global -> . metodo
    (5) declaracion -> . tipo lista_asignaciones_dec
    (32) def_struct -> . STRUCT IDENTIFICADOR LLIZQ struct_lista_decl LLDER
    (41) declaracion_struct -> . STRUCT IDENTIFICADOR IDENTIFICADOR
    (42) declaracion_struct -> . STRUCT IDENTIFICADOR IDENTIFICADOR accesos
    (44) metodo -> . VOID IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (45) metodo -> . VOID IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
    (46) metodo -> . tipo IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (47) metodo -> . tipo IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
    (23) tipo -> . INT
    (24) tipo -> . CHAR
    (25) tipo -> . DOUBLE
    (26) tipo -> . FLOAT

    STRUCT          shift and go to state 9
    VOID            shift and go to state 10
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    FLOAT           shift and go to state 14

    init                           shift and go to state 1
    instrucciones_globales         shift and go to state 2
    instruccion_global             shift and go to state 3
    declaracion                    shift and go to state 4
    def_struct                     shift and go to state 5
    declaracion_struct             shift and go to state 6
    metodo                         shift and go to state 7
    tipo                           shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones_globales .
    (2) instrucciones_globales -> instrucciones_globales . instruccion_global
    (4) instruccion_global -> . declaracion PTCOMA
    (31) instruccion_global -> . def_struct PTCOMA
    (40) instruccion_global -> . declaracion_struct PTCOMA
    (43) instruccion_global -> . metodo
    (5) declaracion -> . tipo lista_asignaciones_dec
    (32) def_struct -> . STRUCT IDENTIFICADOR LLIZQ struct_lista_decl LLDER
    (41) declaracion_struct -> . STRUCT IDENTIFICADOR IDENTIFICADOR
    (42) declaracion_struct -> . STRUCT IDENTIFICADOR IDENTIFICADOR accesos
    (44) metodo -> . VOID IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (45) metodo -> . VOID IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
    (46) metodo -> . tipo IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (47) metodo -> . tipo IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
    (23) tipo -> . INT
    (24) tipo -> . CHAR
    (25) tipo -> . DOUBLE
    (26) tipo -> . FLOAT

    $end            reduce using rule 1 (init -> instrucciones_globales .)
    STRUCT          shift and go to state 9
    VOID            shift and go to state 10
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    FLOAT           shift and go to state 14

    instruccion_global             shift and go to state 15
    declaracion                    shift and go to state 4
    def_struct                     shift and go to state 5
    declaracion_struct             shift and go to state 6
    metodo                         shift and go to state 7
    tipo                           shift and go to state 8

state 3

    (3) instrucciones_globales -> instruccion_global .

    STRUCT          reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    VOID            reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    INT             reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    CHAR            reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    DOUBLE          reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    FLOAT           reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    $end            reduce using rule 3 (instrucciones_globales -> instruccion_global .)


state 4

    (4) instruccion_global -> declaracion . PTCOMA

    PTCOMA          shift and go to state 16


state 5

    (31) instruccion_global -> def_struct . PTCOMA

    PTCOMA          shift and go to state 17


state 6

    (40) instruccion_global -> declaracion_struct . PTCOMA

    PTCOMA          shift and go to state 18


state 7

    (43) instruccion_global -> metodo .

    STRUCT          reduce using rule 43 (instruccion_global -> metodo .)
    VOID            reduce using rule 43 (instruccion_global -> metodo .)
    INT             reduce using rule 43 (instruccion_global -> metodo .)
    CHAR            reduce using rule 43 (instruccion_global -> metodo .)
    DOUBLE          reduce using rule 43 (instruccion_global -> metodo .)
    FLOAT           reduce using rule 43 (instruccion_global -> metodo .)
    $end            reduce using rule 43 (instruccion_global -> metodo .)


state 8

    (5) declaracion -> tipo . lista_asignaciones_dec
    (46) metodo -> tipo . IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (47) metodo -> tipo . IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER
    (6) lista_asignaciones_dec -> . lista_asignaciones_dec COMA asignacion_dec
    (7) lista_asignaciones_dec -> . asignacion_dec
    (8) asignacion_dec -> . IDENTIFICADOR
    (9) asignacion_dec -> . IDENTIFICADOR ASIG expresion
    (10) asignacion_dec -> . IDENTIFICADOR accesos
    (11) asignacion_dec -> . IDENTIFICADOR accesos ASIG expresion

    IDENTIFICADOR   shift and go to state 20

    lista_asignaciones_dec         shift and go to state 19
    asignacion_dec                 shift and go to state 21

state 9

    (32) def_struct -> STRUCT . IDENTIFICADOR LLIZQ struct_lista_decl LLDER
    (41) declaracion_struct -> STRUCT . IDENTIFICADOR IDENTIFICADOR
    (42) declaracion_struct -> STRUCT . IDENTIFICADOR IDENTIFICADOR accesos

    IDENTIFICADOR   shift and go to state 22


state 10

    (44) metodo -> VOID . IDENTIFICADOR PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (45) metodo -> VOID . IDENTIFICADOR PIZQ PDER LLIZQ instrucciones LLDER

    IDENTIFICADOR   shift and go to state 23


state 11

    (23) tipo -> INT .

    IDENTIFICADOR   reduce using rule 23 (tipo -> INT .)
    PDER            reduce using rule 23 (tipo -> INT .)


state 12

    (24) tipo -> CHAR .

    IDENTIFICADOR   reduce using rule 24 (tipo -> CHAR .)
    PDER            reduce using rule 24 (tipo -> CHAR .)


state 13

    (25) tipo -> DOUBLE .

    IDENTIFICADOR   reduce using rule 25 (tipo -> DOUBLE .)
    PDER            reduce using rule 25 (tipo -> DOUBLE .)


state 14

    (26) tipo -> FLOAT .

    IDENTIFICADOR   reduce using rule 26 (tipo -> FLOAT .)
    PDER            reduce using rule 26 (tipo -> FLOAT .)


state 15

    (2) instrucciones_globales -> instrucciones_globales instruccion_global .

    STRUCT          reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    VOID            reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    INT             reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    CHAR            reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    DOUBLE          reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    FLOAT           reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)
    $end            reduce using rule 2 (instrucciones_globales -> instrucciones_globales instruccion_global .)


state 16

    (4) instruccion_global -> declaracion PTCOMA .

    STRUCT          reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    VOID            reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    INT             reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    CHAR            reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    DOUBLE          reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    FLOAT           reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)
    $end            reduce using rule 4 (instruccion_global -> declaracion PTCOMA .)


state 17

    (31) instruccion_global -> def_struct PTCOMA .

    STRUCT          reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    VOID            reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    INT             reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    CHAR            reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    DOUBLE          reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    FLOAT           reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)
    $end            reduce using rule 31 (instruccion_global -> def_struct PTCOMA .)


state 18

    (40) instruccion_global -> declaracion_struct PTCOMA .

    STRUCT          reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    VOID            reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    INT             reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    CHAR            reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    DOUBLE          reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    FLOAT           reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)
    $end            reduce using rule 40 (instruccion_global -> declaracion_struct PTCOMA .)


state 19

    (5) declaracion -> tipo lista_asignaciones_dec .
    (6) lista_asignaciones_dec -> lista_asignaciones_dec . COMA asignacion_dec

    PTCOMA          reduce using rule 5 (declaracion -> tipo lista_asignaciones_dec .)
    COMA            shift and go to state 24


state 20

    (46) metodo -> tipo IDENTIFICADOR . PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (47) metodo -> tipo IDENTIFICADOR . PIZQ PDER LLIZQ instrucciones LLDER
    (8) asignacion_dec -> IDENTIFICADOR .
    (9) asignacion_dec -> IDENTIFICADOR . ASIG expresion
    (10) asignacion_dec -> IDENTIFICADOR . accesos
    (11) asignacion_dec -> IDENTIFICADOR . accesos ASIG expresion
    (27) accesos -> . accesos acceso
    (28) accesos -> . acceso
    (29) acceso -> . CIZQ expresion CDER
    (30) acceso -> . CIZQ CDER

    PIZQ            shift and go to state 25
    COMA            reduce using rule 8 (asignacion_dec -> IDENTIFICADOR .)
    PTCOMA          reduce using rule 8 (asignacion_dec -> IDENTIFICADOR .)
    ASIG            shift and go to state 26
    CIZQ            shift and go to state 29

    accesos                        shift and go to state 27
    acceso                         shift and go to state 28

state 21

    (7) lista_asignaciones_dec -> asignacion_dec .

    COMA            reduce using rule 7 (lista_asignaciones_dec -> asignacion_dec .)
    PTCOMA          reduce using rule 7 (lista_asignaciones_dec -> asignacion_dec .)


state 22

    (32) def_struct -> STRUCT IDENTIFICADOR . LLIZQ struct_lista_decl LLDER
    (41) declaracion_struct -> STRUCT IDENTIFICADOR . IDENTIFICADOR
    (42) declaracion_struct -> STRUCT IDENTIFICADOR . IDENTIFICADOR accesos

    LLIZQ           shift and go to state 31
    IDENTIFICADOR   shift and go to state 30


state 23

    (44) metodo -> VOID IDENTIFICADOR . PIZQ lista_parametros PDER LLIZQ instrucciones LLDER
    (45) metodo -> VOID IDENTIFICADOR . PIZQ PDER LLIZQ instrucciones LLDER

    PIZQ            shift and go to state 32


state 24

    (6) lista_asignaciones_dec -> lista_asignaciones_dec COMA . asignacion_dec
    (8) asignacion_dec -> . IDENTIFICADOR
    (9) asignacion_dec -> . IDENTIFICADOR ASIG expresion
    (10) asignacion_dec -> . IDENTIFICADOR accesos
    (11) asignacion_dec -> . IDENTIFICADOR accesos ASIG expresion

    IDENTIFICADOR   shift and go to state 34

    asignacion_dec                 shift and go to state 33

state 25

    (46) metodo -> tipo IDENTIFICADOR PIZQ . lista_parametros PDER LLIZQ instrucciones LLDER
    (47) metodo -> tipo IDENTIFICADOR PIZQ . PDER LLIZQ instrucciones LLDER
    (48) lista_parametros -> . lista_parametros COMA parametro
    (49) lista_parametros -> . parametro
    (50) parametro -> . tipo IDENTIFICADOR
    (51) parametro -> . tipo IDENTIFICADOR accesos
    (23) tipo -> . INT
    (24) tipo -> . CHAR
    (25) tipo -> . DOUBLE
    (26) tipo -> . FLOAT

    PDER            shift and go to state 37
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    DOUBLE          shift and go to state 13
    FLOAT           shift and go to state 14

    tipo                           shift and go to state 35
    lista_parametros               shift and go to state 36
    parametro                      shift and go to state 38

state 26

    (9) asignacion_dec -> IDENTIFICADOR ASIG . expresion
    (105) expresion -> . expresion MAS expresion
    (106) expresion -> . expresion MENOS expresion
    (107) expresion -> . expresion POR expresion
    (108) expresion -> . expresion DIVIDIDO expresion
    (109) expresion -> . expresion MODULO expresion
    (110) expresion -> . expresion AND expresion
    (111) expresion -> . expresion OR expresion
    (112) expresion -> . expresion BBAND expresion
    (113) expresion -> . expresion BBOR expresion
    (114) expresion -> . expresion BBXOR expresion
    (115) expresion -> . expresion BBIZQ expresion
    (116) expresion -> . expresion BBDER expresion
    (117) expresion -> . expresion IGUAL_QUE expresion
    (118) expresion -> . expresion DESIGUAL_QUE expresion
    (119) expresion -> . expresion MENOR_QUE expresion
    (120) expresion -> . expresion MAYOR_QUE expresion
    (121) expresion -> . expresion MENOR_IGUAL_QUE expresion
    (122) expresion -> . expresion MAYOR_IGUAL_QUE expresion
    (123) expresion -> . BBNOT expresion
    (124) expresion -> . NOT expresion
    (125) expresion -> . INCREMENTO IDENTIFICADOR
    (126) expresion -> . DECREMENTO IDENTIFICADOR
    (127) expresion -> . BBAND expresion
    (128) expresion -> . IDENTIFICADOR INCREMENTO
    (129) expresion -> . IDENTIFICADOR DECREMENTO
    (130) expresion -> . IDENTIFICADOR accesos
    (131) expresion -> . IDENTIFICADOR lista_punto
    (132) expresion -> . IDENTIFICADOR accesos lista_punto
    (133) expresion -> . ENTERO
    (134) expresion -> . CADENA
    (135) expresion -> . DECIMAL
    (136) expresion -> . CARACTER
    (137) expresion -> . IDENTIFICADOR
    (138) expresion -> . llamada
    (139) expresion -> . PIZQ expresion PDER
    (140) expresion -> . expresion TERNARIO expresion DPUNTOS expresion
    (141) expresion -> . SIZEOF PIZQ expresion PDER
    (142) expresion -> . SIZEOF PIZQ tipo PDER
    (143) expresion -> . PIZQ tipo PDER expresion
    (145) llamada -> . IDENTIFICADOR PIZQ PDER
    (146) llamada -> . IDENTIFICADOR PIZQ lista_expresiones PDER

    BBNOT           shift and go to state 42
    NOT             shift and go to state 43
    INCREMENTO      shift and go to state 44
    DECREMENTO      shift and go to state 45
    BBAND           shift and go to state 41
    IDENTIFICADOR   shift and go to state 39
    ENTERO          shift and go to state 46
    CADENA          shift and go to state 47
    DECIMAL         shift and go to state 48
    CARACTER        shift and go to state 49
    PIZQ            shift and go to state 51
    SIZEOF          shift and go to state 52

    expresion                      shift and go to state 40
    llamada                        shift and go to state 50

state 27

    (10) asignacion_dec -> IDENTIFICADOR accesos .
    (11) asignacion_dec -> IDENTIFICADOR accesos . ASIG expresion
    (27) accesos -> accesos . acceso
    (29) acceso -> . CIZQ expresion CDER
    (30) acceso -> . CIZQ CDER

    COMA            reduce using rule 10 (asignacion_dec -> IDENTIFICADOR accesos .)
    PTCOMA          reduce using rule 10 (asignacion_dec -> IDENTIFICADOR accesos .)
    ASIG            shift and go to state 53
    CIZQ            shift and go to state 29

    acceso                         shift and go to state 54

state 28

    (28) accesos -> acceso .

    ASIG            reduce using rule 28 (accesos -> acceso .)
    CIZQ            reduce using rule 28 (accesos -> acceso .)
    COMA            reduce using rule 28 (accesos -> acceso .)
    PTCOMA          reduce using rule 28 (accesos -> acceso .)
    PUNTO           reduce using rule 28 (accesos -> acceso .)
    MAS             reduce using rule 28 (accesos -> acceso .)
    MENOS           reduce using rule 28 (accesos -> acceso .)
    POR             reduce using rule 28 (accesos -> acceso .)
    DIVIDIDO        reduce using rule 28 (accesos -> acceso .)
    MODULO          reduce using rule 28 (accesos -> acceso .)
    AND             reduce using rule 28 (accesos -> acceso .)
    OR              reduce using rule 28 (accesos -> acceso .)
    BBAND           reduce using rule 28 (accesos -> acceso .)
    BBOR            reduce using rule 28 (accesos -> acceso .)
    BBXOR           reduce using rule 28 (accesos -> acceso .)
    BBIZQ           reduce using rule 28 (accesos -> acceso .)
    BBDER           reduce using rule 28 (accesos -> acceso .)
    IGUAL_QUE       reduce using rule 28 (accesos -> acceso .)
    DESIGUAL_QUE    reduce using rule 28 (accesos -> acceso .)
    MENOR_QUE       reduce using rule 28 (accesos -> acceso .)
    MAYOR_QUE       reduce using rule 28 (accesos -> acceso .)
    MENOR_IGUAL_QUE reduce using rule 28 (accesos -> acceso .)
    MAYOR_IGUAL_QUE reduce using rule 28 (accesos -> acceso .)
    TERNARIO        reduce using rule 28 (accesos -> acceso .)
    CDER            reduce using rule 28 (accesos -> acceso .)
    PDER            reduce using rule 28 (accesos -> acceso .)
    DPUNTOS         reduce using rule 28 (accesos -> acceso .)
    AND_ASIG        reduce using rule 28 (accesos -> acceso .)
    DER_ASIG        reduce using rule 28 (accesos -> acceso .)
    DIV_ASIG        reduce using rule 28 (accesos -> acceso .)
    IZQ_ASIG        reduce using rule 28 (accesos -> acceso .)
    MAS_ASIG        reduce using rule 28 (accesos -> acceso .)
    MENOS_ASIG      reduce using rule 28 (accesos -> acceso .)
    MOD_ASIG        reduce using rule 28 (accesos -> acceso .)
    OR_ASIG         reduce using rule 28 (accesos -> acceso .)
    POR_ASIG        reduce using rule 28 (accesos -> acceso .)
    XOR_ASIG        reduce using rule 28 (accesos -> acceso .)


state 29
